Patch for Twitter button when Turbolinks present. Facebook and Google+ button still not Turbolinks compatiable.

--- a/app/views/shareable/_twitter.html.erb
+++ b/app/views/shareable/_twitter.html.erb
@@ -1,4 +1,18 @@
 <!--script src='http://platform.twitter.com/widgets.js' type='text/javascript'></script> -->
+<%- if defined?(Turbolinks) %>
+  <%= output_once :twitter do %>
+    <script src="//platform.twitter.com/widgets.js"></script>
+  <% end %>
+<% else -%>
+  <script>!function(d,s,id){
+    var js,fjs=d.getElementsByTagName(s)[0];
+    if(!d.getElementById(id)){
+        js=d.createElement(s);
+        js.id=id;js.src="//platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js,fjs);}} (document,"script","twitter-wjs");
+  </script>
+<% end -%>
+
 <a href='http://twitter.com/share'
    class='twitter-share-button'
    data-url='<%= options[:url] %>'
@@ -11,11 +25,3 @@
    data-hashtags='<%= options[:hashtags] %>'
    data-size='<%= options[:size] %>'
    data-dnt='<%= options[:dnt] %>'>Tweet</a>
-
-<script>!function(d,s,id){
-    var js,fjs=d.getElementsByTagName(s)[0];
-    if(!d.getElementById(id)){
-        js=d.createElement(s);
-        js.id=id;js.src="//platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js,fjs);}} (document,"script","twitter-wjs");
-</script>
