Consistently use double quotes; Omit empty attributes

--- a/app/views/shareable/_facebook.html.erb
+++ b/app/views/shareable/_facebook.html.erb
@@ -9,12 +9,6 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <% end %>
 
-<fb:like href='<%= options[:url] %>'
-         send='<%= options[:send] %>'
-         layout='<%= options[:layout] %>'
-         show_faces='<%= options[:show_faces] %>'
-         width='<%= options[:width] %>'
-         action='<%= options[:action] %>'
-         font='<%= options[:font] %>'
-         colorscheme='<%= options[:colorscheme] %>'
-         ref='<%= options[:ref] %>' ></fb:like>
+<fb:like
+  <%= html_attributes(options.slice(:url, :send, :layout, :show_faces, :width, :action, :font, :colorscheme, :ref)) %>
+></fb:like>
