--- a/app/views/shareable/_linkedin.html.erb
+++ b/app/views/shareable/_linkedin.html.erb
@@ -1,8 +1,4 @@
 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 <script type="IN/Share"
-        data-url='<%= options[:url] %>'
-        data-counter='<%= options[:counter] %>'
-        data-onerror='<%= options[:onerror]%>'
-        data-onsuccess='<%= options[:onsuccess]%>'
-        data-showzero='<%= options[:showzero] %>'
+  <%= html_attributes(options.slice(:url, :counter, :onerror, :onsuccess, :showzero), :data => true) %>
 ></script>
