--- a/app/views/shareable/_social_buttons.html.erb
+++ b/app/views/shareable/_social_buttons.html.erb
@@ -1,7 +1,7 @@
-<nav class="share">
-  <%= social_buttons.render do -%>
-      <% each_button do |button| -%>
-          <%= eval button + '_tag' %>
-      <% end -%>
-  <% end -%>
-</nav>
+<%= render :layout =>'shareable/partials/parent_wrapper' do %>
+  <%= social_buttons.render do %>
+    <% each_button do |button| %>
+      <%= eval button + '_tag' %>
+    <% end %>
+  <% end %>
+<% end %>
