--- a/app/views/shareable/partials/scripts/_facebook.html.erb
+++ b/app/views/shareable/partials/scripts/_facebook.html.erb
@@ -1,9 +1,9 @@
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
+<script>
+(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1<%= raw('&appId=' + app_id) unless app_id.empty? %>";
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1<%= raw('&appId=' + app_id.to_s) if defined?(app_id) %>";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
