--- a/app/views/shareable/_pinterest.html.erb
+++ b/app/views/shareable/_pinterest.html.erb
@@ -1,6 +1,6 @@
 <% if options[:static_link] %>
   <%= render :layout => "shareable/partials/button_wrapper", locals: {:options => options} do %>
-    <%= render "shareable/partials/link", :options => options.merge(:url=>"http://pinterest.com/pin/create/button/?url=#{options[:url]}&description=#{options[:description]}&media=#{options[:media]}") %>
+    <%= render "shareable/partials/link", :options => options.merge(:url=>"https://pinterest.com/pin/create/button/?url=#{options[:url]}&description=#{options[:description]}&media=#{options[:media]}") %>
   <% end %>
 <% else %>
   <%= render :layout => "shareable/partials/button_wrapper", locals: {:options => options} do %>
