Fix for jquery.turbolinks. Version 1.1.1

--- a/app/views/shareable/_facebook.html.erb
+++ b/app/views/shareable/_facebook.html.erb
@@ -4,33 +4,37 @@
   <% end %>
 <% else %>
 <div id="fb-root"></div>
-  <% unless options[:button_only] %>
+  <% if !options[:button_only] && !options[:turbolinks] %>
     <%= output_once :facebook do %>
-      <% if options[:turbolinks] %>
-<script>
-  if (typeof window.facebookLoaded == 'undefined') {
-    var facebookLoaded = false;
-  }
-  function dynamicLoadFacebook(callback) {
-    if (facebookLoaded !== true) {
-      $('head').append("<script><%= raw(render 'shareable/partials/scripts/head/facebook', :app_id=>options[:app_id]) %><\/script>");
-      callback();
-    }
-  }
-  $(function() {
-    return dynamicLoadFacebook(function() {
-      facebookLoaded = true;
-    });
-  });
-</script>
-      <% else %>
-        <%= render "shareable/partials/scripts/facebook", :app_id => options[:app_id] %>
-      <% end %> 
+      <%= render "shareable/partials/scripts/facebook", :app_id => options[:app_id] %>
     <% end %>
   <% end %>
   <%= render :layout => "shareable/partials/button_wrapper", locals: {:options => options} do %>
 <div class="fb-like"
   <%= html_attributes(options.slice(:url, :send, :layout, :show_faces, :width, :action, :font, :colorscheme, :ref, :share, :kid_directed_site), :data => true) %>
 ></div>
+  <% end %>
+  <% if options[:turbolinks] && !options[:button_only] %>
+    <%= output_once :facebook do %>
+<script>
+  if (typeof window.facebookLoaded == 'undefined') {
+    var facebookLoaded = false;
+  }
+  var __loadFacebook = function() {
+    if (facebookLoaded !== true) {
+      $('head').append("<script><%= raw(render 'shareable/partials/scripts/head/facebook', :app_id=>options[:app_id]) %><\/script>");
+    }
+  };
+  if (typeof $.turbo == 'undefined') {
+    $(function() {
+      return __loadFacebook();
+    });
+  }
+  //for jquery.turbolinks
+  else {
+    __loadFacebook();  
+  }
+</script>
+    <% end %>
   <% end %>
 <% end %>
