--- a/app/views/shareable/partials/scripts/head/_linkedin.html.erb
+++ b/app/views/shareable/partials/scripts/head/_linkedin.html.erb
@@ -1,11 +1,13 @@
 var loadLinkedIn; \
 $(function() { \
-  loadLinkedIn(); \
-  return $(document).on('page:load', loadLinkedIn); \
+  if(linkedinLoaded !== true) { \
+    loadLinkedIn(); \
+    return $(document).on('page:load', loadLinkedIn); \
+  } \
 }); \
 loadLinkedIn = function() { \
   delete IN; \
-  $.getScript('//platform.linkedin.com/in.js'); \
+  $.getScript('//platform.linkedin.com/in.js', function() {linkedinLoaded = true;}); \
   return { \
     lang: 'en_US' \
   }; \
