--- a/app/views/shareable/partials/scripts/_facebook.html.erb
+++ b/app/views/shareable/partials/scripts/_facebook.html.erb
@@ -3,7 +3,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1<%= raw('&appId=' + app_id.to_s) if defined?(app_id) %>";
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1<%= raw('&appId=' + app_id.to_s) if defined?(app_id) %>&status=0&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
