--- a/app/views/shareable/partials/scripts/head/_facebook.html.erb
+++ b/app/views/shareable/partials/scripts/head/_facebook.html.erb
@@ -25,7 +25,7 @@ restoreFacebookRoot = function() { \
 }; \
 loadFacebookSDK = function() { \
   window.fbAsyncInit = initializeFacebookSDK; \
-  return $.getScript('//connect.facebook.net/en_US/all.js'); \
+  return $.getScript('//connect.facebook.net/en_US/all.js', function() { facebookLoaded = true; }); \
 }; \
 initializeFacebookSDK = function() { \
   return FB.init({ \
